--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,26 +1,29 @@
-NotBlank.utilisateurs.pseudo=Le pseudo est obligatoire...
-Size.utilisateurs.pseudo=Le pseudo ne peut dépasser 30 caractères
+NotBlank.utilisateur.pseudo=Le pseudo est obligatoire...
+Size.utilisateur.pseudo=Le pseudo ne peut dépasser 30 caractères
 
-NotBlank.utilisateurs.nom=Le nom est obligatoire...
-Size.utilisateurs.nom=Le nom ne peut dépasser 30 caractères
+NotBlank.utilisateur.nom=Le nom est obligatoire...
+Size.utilisateur.nom=Le nom ne peut dépasser 30 caractères
 
-NotBlank.utilisateurs.prenom=Le nom est obligatoire...
-Size.utilisateurs.prenom=Le nom ne peut dépasser 30 caractères
+NotBlank.utilisateur.prenom=Le nom est obligatoire...
+Size.utilisateur.prenom=Le nom ne peut dépasser 30 caractères
 
-Email.utilisateurs.email=Le champ email est mal renseigné
-Pattern.utilisateurs.email=Le format de l''email doit respecter le pattern alias@exemple.fr
+Email.utilisateur.email=Le champ email est mal renseigné
+Pattern.utilisateur.email=Le format de l''email doit respecter le pattern alias@exemple.fr
 
-Pattern.utilisateurs.telephone=Le numéro de téléphone doit être au format français
+Pattern.utilisateur.telephone=Le numéro de téléphone doit être au format français
 
-NotBlank.utilisateurs.rue=La rue est obligatoire...
-Size.utilisateurs.rue= 30 caractères maximum
+NotBlank.utilisateur.rue=La rue est obligatoire...
+Size.utilisateur.rue= 30 caractères maximum
 
-Pattern.utilisateurs.codePostal=Le code postal doit être au format français
+Pattern.utilisateur.codePostal=Le code postal doit être au format français
 Size.utilisateurs.codePostal=10 caractères maximum
 
-NotBlank.utilisateurs.ville=La ville est obligatoire...
-Size.utilisateurs.ville=30 caractères maximum
+NotBlank.utilisateur.ville=La ville est obligatoire...
+Size.utilisateur.ville=30 caractères maximum
 
-NotBlank.utilisateurs.motDePasse=Le Mot de passe est obligatoire...
-Pattern.utilisateurs.motDePasse=Le mot de passe doit contenir au moins une minuscule, une majuscule, un chiffre et un caractères spécial
-Size.utilisateurs.motDePasse=caractères maximum atteints
+NotBlank.utilisateur.motDePasse=Le Mot de passe est obligatoire...
+Pattern.utilisateur.motDePasse=Le mot de passe doit contenir au moins une minuscule, une majuscule, un chiffre, un caractère spécial et 8 caractère
+Size.utilisateur.motDePasse=caractères maximum atteints
+
+NotBlank.article.nomArticle=Le nom de l''article est obligatoire
+NotBlank.article.description=La description est obligatoire 
